.jjconflict-side-0/apps/qbittorrent/overlays/nishir-tailnet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
spec:
  defaultBackend:
    service:
      name: qbittorrent
      port:
        name: https
  ingressClassName: tailscale
  tls:
    - hosts:
        - qbittorrent
